@@ -25,6 +25,8 @@
   "portraitSize" : [22, 22],
   "portraitImageOffset" : [6, 0],
 
+  "portraitPreviewSize": 1.5,
+
   "defaultPortraitOffset": [-27, -46],
   "defaultPortraitScale": 3,
   
